--- a/backend/package.json
+++ b/backend/package.json
@@ -49,7 +49,10 @@
     "@types/node-cron": "^3.0.11",
     "@types/supertest": "^6.0.3",
     "@types/uuid": "^10.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.29.0",
+    "@typescript-eslint/parser": "^8.29.0",
     "concurrently": "^9.1.2",
+    "eslint": "^9.23.0",
     "jest": "^29.7.0",
     "supertest": "^7.1.0",
     "ts-jest": "^29.3.1",
