--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "leaflet": "^1.9.4",
     "mapbox-gl": "^3.11.0",
     "next": "15.2.4",
+    "node-html-parser": "^7.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-intersection-observer": "^9.16.0",
