--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@react-google-maps/api": "^2.20.6",
     "@tanstack/react-query": "^5.71.5",
     "@types/mapbox-gl": "^3.4.1",
+    "@vercel/analytics": "^1.5.0",
     "clsx": "^2.1.1",
     "leaflet": "^1.9.4",
     "mapbox-gl": "^3.11.0",
