blog posts standardized and added to

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,9 +16,11 @@
     "@types/mapbox-gl": "^3.4.1",
     "@vercel/analytics": "^1.5.0",
     "clsx": "^2.1.1",
+    "gray-matter": "^4.0.3",
     "leaflet": "^1.9.4",
     "mapbox-gl": "^3.11.0",
     "next": "15.2.4",
+    "next-mdx-remote": "^5.0.0",
     "node-html-parser": "^7.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -28,15 +30,18 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.1.4",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/leaflet": "^1.9.17",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.21",
     "canvas": "^3.1.0",
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
-    "tailwindcss": "^4",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.4",
     "typescript": "^5"
   }
 }
